fix textarea heights on firefox

--- a/client/main.scss
+++ b/client/main.scss
@@ -98,6 +98,10 @@ body {
     overflow-x: hidden;
 }
 
+textarea {
+    overflow-x: hidden;
+}
+
 .scroll-area {
     flex: 1;
 }
